kubernetes/apps/actions-runner-system/ghar-scale-set/arc-talos/networkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ghar-set-talos
spec:
  endpointSelector:
    matchLabels:
      actions.github.com/scale-set-name: ghar-set-talos
  ingress: []
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchName: github.com
    - matchName: api.github.com
    - matchPattern: "*.github.com"
    - matchPattern: "*.githubusercontent.com"
    - matchPattern: "*.actions.githubusercontent.com"
    - matchPattern: "*.blob.core.windows.net"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "50000"
        protocol: TCP
  - toCIDR:
    - 10.96.51.110/32 # default/talos; endpoint in generated Talos service-account config
    - 10.100.47.35/32 # Talos API service backend (control plane)
    - 10.100.47.48/32 # Talos API service backend (control plane)
    - 10.100.47.49/32 # Talos API service backend (control plane)
    - 10.100.47.50/32 # workflow target (worker)
    - 10.100.47.51/32 # workflow target (worker)
    toPorts:
    - ports:
      - port: "50000"
        protocol: TCP
